tests/whiley/valid/test_1176.wyal
assert "assertion failed":
    forall({int f1, int f2} x, {int f1, int f2} x$1, {int f1, int f2} y):
        if:
            x == {f1: 2, f2: 3}
            y == {f1: 1, f2: 3}
            x != y
            x$1 == x{f1:=1}
            x$1 == {f1: 1, f2: 3}
            y == {f1: 1, f2: 3}
        then:
            x$1 == y


